--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+:root {
+  --primary: #f2f3f4;
+  --dark: #000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  height: 220dvh;
+  font-family: "Poppins", sans-serif;
+  border: 5px solid var(--dark);
+  background: var(--primary);
+  overflow-x: hidden;
+}
+
+/* Navigation Bar */
+
+.navbar {
+  margin: 0.5rem;
+  width: 100%;
+}
+
+.navbar ul {
   display: flex;
-  flex-direction: column;
+  list-style: none;
+  justify-content: space-between;
   align-items: center;
+  overflow: hidden;
+  margin-left: -20rem;
+}
+
+.navbar ul li {
+  margin-left: 25rem;
+  font-size: 1.2rem;
+  font-weight: 300;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.navbar ul li:nth-child(1) {
+  font-weight: 500;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: var(--dark);
+}
+
+/* Hero Heading */
+
+.heading {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin: 3rem;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.heading h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 4rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  line-height: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.heading h1 span {
+  margin-left: 5rem;
+}
+
+.heading .copy {
+  font-size: 2rem;
+}
+
+.heading .copy-text {
+  font-size: 0.8rem;
+  font-weight: 500;
+  margin-top: -4rem;
+}
+
+.hero-img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  body {
+    height: 100dvh;
   }
-  to {
-    transform: rotate(360deg);
+  .navbar ul {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .heading h1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 2.5rem;
+  }
+
+  .heading h1 span {
+    margin-left: 0rem;
+  }
+
+  .heading .copy {
+    font-size: 1rem;
+  }
+
+  .heading .copy-text {
+    font-size: 0.5rem;
+    margin-top: -3rem;
   }
 }
