--- a/src/App.css
+++ b/src/App.css
@@ -96,16 +96,17 @@ body {
 
 @media (max-width: 768px) {
   body {
-    height: 100dvh;
+    height: 110dvh;
   }
   .navbar ul {
     display: flex;
     flex-direction: column;
+    margin-left: -22rem;
   }
 
   .heading h1 {
     font-family: "Poppins", sans-serif;
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   .heading h1 span {
